# G2O-WebSocket

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  g2ows.json  vcpkg.json
.github/workflows/: release.yml
dependencies/: CMakeLists.txt  ixwebsocket.cmake
source/: CMakeLists.txt  json_config.cpp  json_config.h  sqfunc.cpp  sqfunc.h  sqmain.cpp  utf8_check.cpp  utf8_check.h  websocket_server.cpp  websocket_server.h
source/client/: CMakeLists.txt  websocket_client.cpp  websocket_client.h
source/server/: CMakeLists.txt  websocket_server.cpp  websocket_server.h
source/util/: CMakeLists.txt  websocket_util.cpp
source/websocket/: CMakeLists.txt  websocket_base.cpp  websocket_base.h  websocket_client.cpp  websocket_client.h  websocket_server.cpp  websocket_server.h
triplets/: arm-linux-static.cmake  arm64-linux-static.cmake
